updates to css and html

--- a/ClayAddressInfoViewer/Views/Home/Index.cshtml
+++ b/ClayAddressInfoViewer/Views/Home/Index.cshtml
@@ -12,17 +12,15 @@
           }
         </style>
         <div class="align-self-center" id="SearchAddress" aria-label="Address search">
-          This div will contain the search input and search button; the input field will not clear, 
-          so the user can see what address/parcel number was looked up.
-          If parcel number is used for search, the address associated with that parcel may be displayed
-          if one has been assigned to it.
+ 
           <div class="input-group AddressSearchBar d-flex align-self-center" id="AddressSearchBar">
-            <input id="AddressSearchInput" type="search" class="input-group-field" placeholder="   Address or Parcel Number" />
+            <input id="AddressSearchInput" type="search" class="input-group-field" placeholder="   Address/Parcel Number" />
 
               <button type="button" id="AddressSearchButton" class="button" value="Search..." required >Search...</button>
 
           </div>
         </div>
+        <hr />
         <div id="Commissioners">
           <b>Commissioners for District <span id="CommissionerDistrict">5</span></b>
           <ul style="list-style-type:none;margin-top:5px;">
@@ -75,7 +73,7 @@
         <div id="Utilities">
           <b>Utilities</b>
           <ul style="list-style-type:none;margin-top:5px;">
-            <li><span id="UtilCompany">Clay COunty Utilities</span></li>
+            <li><span id="UtilCompany">Clay County Utilities</span></li>
           </ul>
         </div>
 
