--- a/ClayAddressInfoViewer/Content/Site.css
+++ b/ClayAddressInfoViewer/Content/Site.css
@@ -4,7 +4,7 @@
   background-color: rgba(255,255,255,1);
   background-image: linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%);
   background-image: -webkit-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%);
-  background: -moz-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* FF3.6+ */
+  background-image: -moz-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* FF3.6+ */
   background: -webkit-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Opera 11.10+ */
@@ -31,7 +31,7 @@ padding:2rem;
 max-width:960px;
 min-width: 332px;
 
-margin: 0 3rem 1rem 0;
+margin: 0 auto;
 }
 footer p {
   padding-left: 2em;
@@ -48,6 +48,8 @@ div .input-group-btn{
 #AddressSearchButton{
   border:none;
   background-color: cadetblue;
+  color: white;
+  color: rgba(255,255,255,.8);
 }
 
 #AddressSearchInput{
