Added app.ts and created function frameworks to create lists and list items.

--- a/ClayAddressInfoViewer/Content/Site.css
+++ b/ClayAddressInfoViewer/Content/Site.css
@@ -2,16 +2,27 @@
   width: 100%;
   background-color: gainsboro;
   background-color: rgba(255,255,255,1);
-  background-image: linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%);
-  background-image: -webkit-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%);
-  background-image: -moz-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* FF3.6+ */
-  background: -webkit-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, cadetblue, cadetblue 5%, transparent 30%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #5f9ea0 0%,#5f9ea0 5%, transparent 30%); /* IE10+ */
+  background-image: linear-gradient(top, cadetblue, cadetblue 100px, transparent 300px);
+  background-image: -webkit-linear-gradient(top, cadetblue, cadetblue 100px, transparent 300px);
+  background-image: -moz-linear-gradient(top, cadetblue, cadetblue 100px, transparent 300px); /* FF3.6+ */
+  background: -webkit-gradient(top, cadetblue, cadetblue 100px, transparent 300px); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, cadetblue, cadetblue 100px, transparent 300px); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, cadetblue, cadetblue 100px, transparent 300px); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #5f9ea0 0%,#5f9ea0 100px, transparent 300px); /* IE10+ */
 }
-
-
+.Title {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.CountyHeading,
+.AppName {
+  color: white;
+  color: rgba(255,255,255,.7);
+}
+.AppName {
+margin-bottom: 0;
+line-height:2rem;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
   padding-left: 15px;
@@ -24,14 +35,14 @@ select,
 textarea {
     max-width: 280px;
 }
-#contentwrapper{
-background-color: white;
-border: 1px solid black;
-padding:2rem;
-max-width:960px;
-min-width: 332px;
-
-margin: 0 auto;
+#contentwrapper {
+  background-color: white;
+  border: 1px solid lightgrey;
+  border: 1px solid rgba(200,200,200,.7);
+  padding: 2rem;
+  max-width: 960px;
+  min-width: 332px;
+  margin: 0 auto;
 }
 footer p {
   padding-left: 2em;
@@ -55,4 +66,16 @@ div .input-group-btn{
 #AddressSearchInput{
   border: 1px lightgray solid;
   width: 245px
+}
+
+.InfoViewerNav a {
+  font-weight:700;
+  padding: 0 2rem 0 2rem;
+  color: white;
+  color: rgba(255,255,255,.7);
+}
+.InfoViewerNav a:hover{
+  padding: 0 2rem 0 2rem;
+  color: white;
+  text-decoration:none;
 }
